# Cloth_Generation

./: README.md
Cloth_gen_plugin/: CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  ExportPlugin.cpp  ExportPlugin.h  runner.h
Cloth_gen_plugin/Qt_file/: mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
